--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
         <!-- Group-0. -->
         <a-entity scale="1 1 1" rotation="0 0 0" class="groups" id="Group-0" visible="true">
 
-            <a-plane data-clickable class="pintings clickable" position="-7.86846 -1.70335 -1.28524"
+            <!-- <a-plane data-clickable class="pintings clickable" position="-7.86846 -1.70335 -1.28524"
                 rotation="-87.00134935943498 177.6988494552589 -85.61249966403787"
                 material="src: #Arrow-1; transparent:true"
                 the_dote="Name_of_dote: Dote-1  ; Group_to_activate: Group-1 ; The_rotation: 0">
-            </a-plane>
+            </a-plane> -->
 
         </a-entity>
 
