--- a/index.html
+++ b/index.html
@@ -83,30 +83,13 @@
         <a-assets>
             <!-- <img id="Scene-4" src="./Style/Images/Scene-4.jpg"> -->
             <img id="Arrow-1" src="./Style/Images/PNG/Arrow-1.png">
+            <!-- <img id="Arrow-2" src="./Style/Images/PNG/Arrow-2.png"> -->
             <img id="Scene-0" src="./Style/Images/Scene-0.jpg">
             <img id="Scene-1" src="./Style/Images/Scene-1.jpg">
             <img id="Scene-2" src="./Style/Images/Scene-2.jpg">
             <img id="Scene-3" src="./Style/Images/Scene-3.jpg">
-            <!-- <img id="Scene-3" src="./Style/Images/Scene-3.jpg"> -->
-            <img id="Arrow-2" src="./Style/Images/PNG/Arrow-2.png">
-            <!-- <img id="Scene-1" src="./Style/Images/Scene-1.jpg">
-            <img id="Scene-6" src="./Style/Images/Scene-6.jpg">
-            <img id="Scene-7" src="./Style/Images/Scene-7.jpg">
-            <img id="Scene-8" src="./Style/Images/Scene-8.jpg">
-            <img id="Scene-9" src="./Style/Images/Scene-9.jpg">
-            <img id="Scene-10" src="./Style/Images/Scene-10.jpg">
-            <img id="Scene-11" src="./Style/Images/Scene-11.jpg">
-            <img id="Scene-12" src="./Style/Images/Scene-12.jpg">
-            <img id="Scene-13" src="./Style/Images/Scene-13.jpg">
-            <img id="Scene-14" src="./Style/Images/Scene-14.jpg">
-            <img id="Scene-15" src="./Style/Images/Scene-15.jpg">
-            <img id="Scene-16" src="./Style/Images/Scene-16.jpg">
-            <img id="Scene-17" src="./Style/Images/Scene-17.jpg">
-            <img id="Scene-18" src="./Style/Images/Scene-18.jpg">
-            <img id="Scene-19" src="./Style/Images/Scene-19.jpg">
-            <img id="Scene-20" src="./Style/Images/Scene-20.jpg">
-            <img id="Scene-21" src="./Style/Images/Scene-21.jpg">
-            <img id="Scene-22" src="./Style/Images/Scene-22.jpg"> -->
+            <img id="Scene-4" src="./Style/Images/Scene-4.jpg">
+            <img id="Scene-5" src="./Style/Images/Scene-5.jpg">
         </a-assets>
 
         <a-entity laser-controls="hand: left"
@@ -143,7 +126,6 @@
                 the_dote="Name_of_dote: Dote-0  ; Group_to_activate: Group-0 ; The_rotation: 0">
             </a-plane>
 
-
             <a-plane data-clickable class="pintings clickable" position="0.2462 -0.8543 -3.34099"
                 rotation="-86.8993628719017 -165.09377796238078 -102.84363239480226"
                 material="src: #Arrow-1; transparent:true"
@@ -161,8 +143,6 @@
                 the_dote="Name_of_dote: Dote-3 ; Group_to_activate: Group-3 ; The_rotation: 0">
             </a-plane>
 
-
-
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
                 position="-2.12689 -1.32277 2.4344" rotation="-84.29928039759803 49.107066705072604 -114.23689815097867"
                 the_dote="Name_of_dote: Dote-1 ; Group_to_activate: Group-1 ; The_rotation: 0">
@@ -170,7 +150,7 @@
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
                 position="-1.87255 -1.07242 6.50843" rotation="-84.29928039759803 49.1070667050726 -114.23689815097867"
-                the_dote="Name_of_dote: Dote-3 ; Group_to_activate: Group-3 ; The_rotation: 0">
+                the_dote="Name_of_dote: Dote-0 ; Group_to_activate: Group-0 ; The_rotation: 0">
             </a-plane>
 
         </a-entity>
@@ -191,11 +171,14 @@
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
                 position="-1.20173 -0.94886 6.74294"
                 rotation="-88.07278043632962 -149.2698295764577 -123.74398684558443"
-                the_dote="Name_of_dote: Dote-4 ; Group_to_activate: Group-4 ; The_rotation:  0">
+                the_dote="Name_of_dote: Dote-5 ; Group_to_activate: Group-5 ; The_rotation:  0">
             </a-plane>
 
-
-
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="-4.99628 -0.94886 -0.67187"
+                rotation="-88.07278043632962 -149.2698295764577 -123.74398684558443"
+                the_dote="Name_of_dote: Dote-4 ; Group_to_activate: Group-4 ; The_rotation:  0">
+            </a-plane>
 
         </a-entity>
 
@@ -204,31 +187,8 @@
         <a-entity scale="0 0 0" class="groups" id="Group-4" visible="false">
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="2.25026 -1.16021 9.26948" rotation="-84.33365786530587 149.35577324572733 -148.43560302674723"
-                the_dote="Name_of_dote: Dote-2 ; Group_to_activate: Group-2 ; The_rotation: 0">
-            </a-plane>
-
-
-
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="1.8721 -1.16021 4.52586" rotation="-84.33365786530587 149.35577324572733 -148.43560302674723"
+                position="4.85208 -1.16021 1.17794" rotation="-84.33365786530587 149.35577324572733 -148.43560302674723"
                 the_dote="Name_of_dote: Dote-3 ; Group_to_activate: Group-3 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="4.73544 -1.16021 0.19436" rotation="-84.33365786530587 149.35577324572733 -148.43560302674723"
-                the_dote="Name_of_dote: Dote-5 ; Group_to_activate: Group-5 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="3.2473 -1.16021 -4.35681" rotation="-79.92761242074984 16.724065082073597 -15.437774832004902"
-                the_dote="Name_of_dote: Dote-12 ; Group_to_activate: Group-12 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-0.83888 -1.16021 -5.72197"
-                rotation="-87.01681921990351 104.75387368376842 -103.72999810386963"
-                the_dote="Name_of_dote: Dote-8 ; Group_to_activate: Group-8 ; The_rotation: 0">
             </a-plane>
 
         </a-entity>
@@ -237,14 +197,16 @@
         <a-entity scale="0 0 0" class="groups" id="Group-5" visible="false">
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-4.64703 -0.73786 -1.16904" rotation="-85.43717457872783 63.98105106666876 -9.407394038252987"
-                the_dote="Name_of_dote: Dote-4 ; Group_to_activate: Group-4 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="4.04666 -0.73786 0.50345" rotation="-86.14019379335336 146.31623214255833 -91.98436330368774"
+                position="-3.51293 -1.2415 -0.01693" rotation="-80.77730883092885 26.49013070007848 28.308125784028583"
                 the_dote="Name_of_dote: Dote-6 ; Group_to_activate: Group-6 ; The_rotation: 0">
             </a-plane>
+
+
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="0.44253 -0.73786 -5.67991" rotation="-86.14019379335336 146.31623214255833 -91.98436330368774"
+                the_dote="Name_of_dote: Dote-3 ; Group_to_activate: Group-3 ; The_rotation: 0">
+            </a-plane>
+
 
         </a-entity>
 
