--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             <img id="Scene-3" src="./Style/Images/Scene-3.jpg">
             <img id="Scene-4" src="./Style/Images/Scene-4.jpg">
             <img id="Scene-5" src="./Style/Images/Scene-5.jpg">
+            <img id="Scene-6" src="./Style/Images/Scene-6.jpg">
+            <img id="Scene-7" src="./Style/Images/Scene-7.jpg">
         </a-assets>
 
         <a-entity laser-controls="hand: left"
@@ -131,6 +133,16 @@
                 material="src: #Arrow-1; transparent:true"
                 the_dote="Name_of_dote: Dote-2  ; Group_to_activate: Group-2 ; The_rotation: 0">
             </a-plane>
+
+
+            <a-plane data-clickable class="pintings clickable" position="-3.27618 -0.8543 -6.80471"
+                rotation="-86.8993628719017 -165.09377796238078 -102.84363239480226"
+                material="src: #Arrow-1; transparent:true"
+                the_dote="Name_of_dote: Dote-3  ; Group_to_activate: Group-3 ; The_rotation: 0">
+            </a-plane>
+
+
+
 
 
         </a-entity>
@@ -198,13 +210,18 @@
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
                 position="-3.51293 -1.2415 -0.01693" rotation="-80.77730883092885 26.49013070007848 28.308125784028583"
-                the_dote="Name_of_dote: Dote-6 ; Group_to_activate: Group-6 ; The_rotation: 0">
+                the_dote="Name_of_dote: Dote-7 ; Group_to_activate: Group-7 ; The_rotation: 0">
             </a-plane>
 
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
                 position="0.44253 -0.73786 -5.67991" rotation="-86.14019379335336 146.31623214255833 -91.98436330368774"
                 the_dote="Name_of_dote: Dote-3 ; Group_to_activate: Group-3 ; The_rotation: 0">
+            </a-plane>
+
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="-0.32374 -0.73786 2.16521" rotation="-80.88559785420858 -110.70862404856305 164.7408359605802"
+                the_dote="Name_of_dote: Dote-6 ; Group_to_activate: Group-6 ; The_rotation: 0">
             </a-plane>
 
 
@@ -214,9 +231,23 @@
         <a-entity scale="0 0 0" class="groups" id="Group-6" visible="false">
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-5.55867 -1.21922 1.00581" rotation="-87.05062372981624 -169.0454678753981 -97.32146516533138"
+                position="-3.3286 -1.21922 0.29426" rotation="-87.05062372981624 -169.0454678753981 -97.32146516533138"
+                the_dote="Name_of_dote: Dote-10 ; Group_to_activate: Group-10 ; The_rotation: 0">
+            </a-plane>
+
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="0.49153 -1.21922 -2.16812" rotation="-87.05062372981624 -169.0454678753981 -97.32146516533138"
                 the_dote="Name_of_dote: Dote-5 ; Group_to_activate: Group-5 ; The_rotation: 0">
             </a-plane>
+
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="0.49153 -1.21922 -10.01269"
+                rotation="-87.05062372981624 -169.0454678753981 -97.32146516533138"
+                the_dote="Name_of_dote: Dote-3 ; Group_to_activate: Group-3 ; The_rotation: 0">
+            </a-plane>
+
+
+
 
         </a-entity>
 
