--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
             <img id="Scene-5" src="./Style/Images/Scene-5.jpg">
             <img id="Scene-6" src="./Style/Images/Scene-6.jpg">
             <img id="Scene-7" src="./Style/Images/Scene-7.jpg">
+            <img id="Scene-8" src="./Style/Images/Scene-8.jpg">
+            <img id="Scene-9" src="./Style/Images/Scene-9.jpg">
         </a-assets>
 
         <a-entity laser-controls="hand: left"
@@ -232,7 +234,7 @@
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
                 position="-3.3286 -1.21922 0.29426" rotation="-87.05062372981624 -169.0454678753981 -97.32146516533138"
-                the_dote="Name_of_dote: Dote-10 ; Group_to_activate: Group-10 ; The_rotation: 0">
+                the_dote="Name_of_dote: Dote-9 ; Group_to_activate: Group-9 ; The_rotation: 0">
             </a-plane>
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
@@ -255,9 +257,16 @@
         <a-entity scale="0 0 0" class="groups" id="Group-7" visible="false">
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-3.66879 -1 0.3136" rotation="-82.71276026288078 166.88140628318897 129.11317434375536"
-                the_dote="Name_of_dote: Dote-2 ; Group_to_activate: Group-2 ; The_rotation: 0">
+                position="-5.1075 -1 0.03325" rotation="-82.71276026288078 166.88140628318897 129.11317434375536"
+                the_dote="Name_of_dote: Dote-8 ; Group_to_activate: Group-8 ; The_rotation: 0">
             </a-plane>
+
+
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true" position="2.67948 -1 0.3136"
+                rotation="-84.11364207197563 -45.10610242167406 -18.52601734776004"
+                the_dote="Name_of_dote: Dote-5 ; Group_to_activate: Group-5 ; The_rotation: 0">
+            </a-plane>
+
 
 
         </a-entity>
@@ -266,20 +275,16 @@
         <a-entity scale="0 0 0" class="groups" id="Group-8" visible="false">
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="0.43328 -1 5.71313" rotation="-83.51318230267854 -119.31731492040367 -172.06037179337648"
-                the_dote="Name_of_dote: Dote-4 ; Group_to_activate: Group-4 ; The_rotation: 0">
+                position="4.04023 -1 0.16054" rotation="-83.51318230267854 -119.31731492040367 -172.0603717933765"
+                the_dote="Name_of_dote: Dote-7 ; Group_to_activate: Group-7 ; The_rotation: 0">
             </a-plane>
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="0.04764 -1 -4.63338" rotation="-84.70092381198472 126.79384118906579 -57.89738519796968"
-                the_dote="Name_of_dote: Dote-17 ; Group_to_activate: Group-17 ; The_rotation: 0">
+                position="-4.17135 -1.7937 0.56899" rotation="-84.70206972757498 53.223768463087566 15.908173181807307"
+                the_dote="Name_of_dote: Dote-10 ; Group_to_activate: Group-10 ; The_rotation: 0">
             </a-plane>
 
 
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-5.05018 -1.7937 1.14563" rotation="-84.70206972757498 53.223768463087566 15.908173181807307"
-                the_dote="Name_of_dote: Dote-18 ; Group_to_activate: Group-18 ; The_rotation: 0">
-            </a-plane>
 
         </a-entity>
 
