--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
     </div>
 
-    <div class="The_Image">
+    <!-- <div class="The_Image">
         <img src="./Style/Images/gallery/Image-1.jpg" width="100%" alt="">
-    </div>
+    </div> -->
 
     <div class="The_Image_Back_Cover">
     </div>
@@ -81,9 +81,7 @@
 
     <a-scene id="the_scene" the_scene cursor="rayOrigin: mouse">
         <a-assets>
-            <!-- <img id="Scene-4" src="./Style/Images/Scene-4.jpg"> -->
             <img id="Arrow-1" src="./Style/Images/PNG/Arrow-1.png">
-            <!-- <img id="Arrow-2" src="./Style/Images/PNG/Arrow-2.png"> -->
             <img id="Scene-0" src="./Style/Images/Scene-0.jpg">
             <img id="Scene-1" src="./Style/Images/Scene-1.jpg">
             <img id="Scene-2" src="./Style/Images/Scene-2.jpg">
@@ -94,6 +92,10 @@
             <img id="Scene-7" src="./Style/Images/Scene-7.jpg">
             <img id="Scene-8" src="./Style/Images/Scene-8.jpg">
             <img id="Scene-9" src="./Style/Images/Scene-9.jpg">
+            <img id="Scene-10" src="./Style/Images/Scene-10.jpg">
+            <img id="Scene-11" src="./Style/Images/Scene-11.jpg">
+            <img id="Scene-12" src="./Style/Images/Scene-12.jpg">
+            <img id="Scene-13" src="./Style/Images/Scene-13.jpg">
         </a-assets>
 
         <a-entity laser-controls="hand: left"
@@ -292,20 +294,16 @@
         <a-entity scale="0 0 0" class="groups" id="Group-9" visible="false">
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-1.3079 -0.79335 3.43342" rotation="-85.80902418776773 58.577486100789976 22.942376032628424"
-                the_dote="Name_of_dote: Dote-17 ; Group_to_activate: Group-17 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="0.81661 -1 -3.0703" rotation="-82.79297435419909 -99.38869689016339 -131.00909168784327"
-                the_dote="Name_of_dote: Dote-10 ; Group_to_activate: Group-10 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="0.81661 -1 -6.32376" rotation="-82.79297435419909 -99.38869689016339 -131.0090916878433"
+                position="-3.80186 -0.79335 -0.27559"
+                rotation="-85.80902418776773 58.577486100789976 22.942376032628424"
                 the_dote="Name_of_dote: Dote-11 ; Group_to_activate: Group-11 ; The_rotation: 0">
             </a-plane>
 
+
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="-0.29646 -1 2.48692" rotation="-76.57294453025887 95.0559900433841 34.75619281043087"
+                the_dote="Name_of_dote: Dote-13 ; Group_to_activate: Group-13 ; The_rotation: 0">
+            </a-plane>
 
 
         </a-entity>
@@ -314,19 +312,10 @@
         <a-entity scale="0 0 0" class="groups" id="Group-10" visible="false">
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-0.11627 -1 -3.08243" rotation="-88.25841876195203 -87.30788177982998 92.12301909010941"
-                the_dote="Name_of_dote: Dote-11 ; Group_to_activate: Group-11 ; The_rotation: 0">
+                position="1.83893 -1 0.20975" rotation="-88.25841876195203 -87.30788177982998 92.12301909010941"
+                the_dote="Name_of_dote: Dote-8 ; Group_to_activate: Group-8 ; The_rotation: 0">
             </a-plane>
 
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true" position="0.2236 -1 3.83369"
-                rotation="-88.5632323089616 -10.872447120402501 -176.43318568581492"
-                the_dote="Name_of_dote: Dote-9 ; Group_to_activate: Group-9 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-1.99252 -1 5.92729" rotation="-88.5632323089616 -10.872447120402501 -176.43318568581492"
-                the_dote="Name_of_dote: Dote-17 ; Group_to_activate: Group-17 ; The_rotation: 0">
-            </a-plane>
 
         </a-entity>
 
@@ -334,8 +323,14 @@
         <a-entity scale="0 0 0" class="groups" id="Group-11" visible="false">
 
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-0.57222 -1.15573 3.02983" rotation="-87.19730092536972 -39.02702021533602 25.148836501677224"
-                the_dote="Name_of_dote: Dote-10 ; Group_to_activate: Group-10 ; The_rotation: 0">
+                position="0.17115 -1.15573 3.02983" rotation="-87.19730092536972 -39.02702021533602 25.148836501677224"
+                the_dote="Name_of_dote: Dote-12 ; Group_to_activate: Group-12 ; The_rotation: 0">
+            </a-plane>
+
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="3.66548 -1.15573 -0.10763"
+                rotation="-82.07047457453912 -12.89613405280457 -1.0679933301238544"
+                the_dote="Name_of_dote: Dote-9 ; Group_to_activate: Group-9 ; The_rotation: 0">
             </a-plane>
 
 
@@ -344,180 +339,26 @@
         <!-- Group12 -->
         <a-entity scale="0 0 0" class="groups" id="Group-12" visible="false">
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-3.50995 -0.67581 3.19139" rotation="-89.6913862075742 99.16638926565263 -12.059042714118435"
-                the_dote="Name_of_dote: Dote-4 ; Group_to_activate: Group-4 ; The_rotation: 0">
+                position="-0.28712 -0.67581 -3.38695" rotation="-89.6913862075742 99.16638926565263 -12.059042714118435"
+                the_dote="Name_of_dote: Dote-11 ; Group_to_activate: Group-11 ; The_rotation: 0">
             </a-plane>
 
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="4.39345 -1.41683 -0.61475" rotation="-84.6613897241207 60.2453662424158 76.31511352244999"
-                the_dote="Name_of_dote: Dote-13 ; Group_to_activate: Group-13 ; The_rotation: 0">
-            </a-plane>
 
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="6.09785 -0.68255 -2.60113" rotation="-81.28494943741477 -85.58213290089593 176.65663922591594"
-                the_dote="Name_of_dote: Dote-14 ; Group_to_activate: Group-14 ; The_rotation: 0">
-            </a-plane>
+
 
         </a-entity>
-
         <!-- Group13 -->
         <a-entity scale="0 0 0" class="groups" id="Group-13" visible="false">
-
-
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="-5.17021 -1.98373 1.47939" rotation="-87.36116685477714 75.31530216994673 15.693314008633246"
-                the_dote="Name_of_dote: Dote-12 ; Group_to_activate: Group-12 ; The_rotation: 0">
+                position="-0.29707 -0.67581 -2.03962" rotation="-89.6913862075742 99.16638926565263 -12.059042714118435"
+                the_dote="Name_of_dote: Dote-9 ; Group_to_activate: Group-9 ; The_rotation: 0">
             </a-plane>
 
-            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
-                position="3.91737 -1.24105 -2.74811" rotation="-81.28494943741477 -85.58213290089593 176.65663922591594"
-                the_dote="Name_of_dote: Dote-14 ; Group_to_activate: Group-14 ; The_rotation: 0">
-            </a-plane>
 
 
 
         </a-entity>
 
-        <!-- Group-14 -->
-        <a-entity scale="0 0 0" class="groups" id="Group-14" visible="false">
-
-            <a-plane data-clickable class="pintings clickable" position="-3.21933 -0.49754 3.23432"
-                rotation="-77.03990513329049 -170.9734708560133 -9.042419922754652"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-13  ; Group_to_activate: Group-13 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="pintings clickable" position="0.30355 -0.90452 -4.73193"
-                rotation="-87.83901365591625 -68.94286557250169 -111.31309452242607"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-15  ; Group_to_activate: Group-15 ; The_rotation: 0">
-            </a-plane>
-
-
-
-        </a-entity>
-
-        <!-- Group-15 -->
-        <a-entity scale="0 0 0" class="groups" id="Group-15" visible="false">
-
-            <a-plane data-clickable class="pintings clickable" position="0.38682 -1.25697 4.79758"
-                rotation="-87.79260407451065 -114.01344461087766 -66.21272167870332"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-14  ; Group_to_activate: Group-14 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="pintings clickable" position="0.38682 -1.25697 -3.74969"
-                rotation="-87.79260407451065 -114.01344461087766 -66.21272167870332"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-16  ; Group_to_activate: Group-16 ; The_rotation: 0">
-            </a-plane>
-
-        </a-entity>
-
-
-        <!-- Group-16 -->
-        <a-entity scale="0 0 0" class="groups" id="Group-16" visible="false">
-
-            <a-plane data-clickable class="pintings clickable" position="0.23814 -0.78221 4.20649"
-                rotation="-87.43393249475876 101.69198722658929 52.456005017612256"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-15  ; Group_to_activate: Group-15 ; The_rotation: 0">
-            </a-plane>
-
-        </a-entity>
-
-        <!-- Group-17 -->
-        <a-entity scale="0 0 0" class="groups" id="Group-17" visible="false">
-            <a-plane data-clickable class="pintings clickable" position="1.12601 -0.49754 -3.30759"
-                rotation="-88.14726494969662 -104.4599463348663 16.55733436369053"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-9  ; Group_to_activate: Group-9 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="pintings clickable" position="-0.01156 -1 5.08257"
-                rotation="-88.30310946997221 -86.26681746607727 -10.820307961045597"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-8  ; Group_to_activate: Group-8 ; The_rotation: 0">
-            </a-plane>
-        </a-entity>
-
-        <!-- Group-18 -->
-        <a-entity scale="0 0 0" class="groups" id="Group-18" visible="false">
-
-            <a-plane data-clickable class="pintings clickable" position="4.85538 -1.1598 -0.34297"
-                rotation="-89.64383071057834 -124.03676827889626 35.14924185789061"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-8  ; Group_to_activate: Group-8 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="pintings clickable" position="-4.49677 -1.44824 -0.8336"
-                rotation="-88.97117825909476 166.07296283425939 103.3449704655417"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-19  ; Group_to_activate: Group-19 ; The_rotation: 0">
-            </a-plane>
-
-        </a-entity>
-
-        <!-- Group-19 -->
-        <a-entity scale="0 0 0" class="groups" id="Group-19" visible="false">
-
-            <a-plane data-clickable class="pintings clickable" position="0.33314 -0.92165 -5.75409"
-                rotation="-88.80731232968733 109.0642351765376 -116.13969098860812"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-22 ; Group_to_activate: Group-22 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="pintings clickable" position="1.87256 -1.73761 2.6395"
-                rotation="-88.80731232968733 109.0642351765376 -116.13969098860812"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-18 ; Group_to_activate: Group-18 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="pintings clickable" position="-3.90258 -0.92165 -2.08207"
-                rotation="-88.80731232968733 109.0642351765376 -116.13969098860812"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-20  ; Group_to_activate: Group-20 ; The_rotation: 0">
-            </a-plane>
-
-
-        </a-entity>
-        <!-- Group-20 -->
-        <a-entity scale="0 0 0" class="groups" id="Group-20" visible="false">
-
-            <a-plane data-clickable class="pintings clickable" position="0.00147 -0.49754 -3.57185"
-                rotation="-84.87281115052397 143.87199418853024 -119.21876617964118"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-21  ; Group_to_activate: Group-21 ; The_rotation: 0">
-            </a-plane>
-
-            <a-plane data-clickable class="pintings clickable" position="3.21534 -0.49754 1.20663"
-                rotation="-84.87281115052397 143.87199418853024 -119.21876617964118"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-19  ; Group_to_activate: Group-19 ; The_rotation: 0">
-            </a-plane>
-
-        </a-entity>
-        <!-- Group-21 -->
-        <a-entity scale="0 0 0" class="groups" id="Group-21" visible="false">
-
-            <a-plane data-clickable class="pintings clickable" position="-0.70763 -0.49754 4.10599"
-                rotation="-85.36956555890241 -157.8292460779171 172.4620152077632"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-20  ; Group_to_activate: Group-20 ; The_rotation: 0">
-            </a-plane>
-
-        </a-entity>
-        <!-- Group-22 -->
-        <a-entity scale="0 0 0" class="groups" id="Group-22" visible="false">
-
-            <a-plane data-clickable class="pintings clickable" position="-2.1248 -0.49754 4.22114"
-                rotation="-85.36956555890241 -157.8292460779171 172.4620152077632"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-19  ; Group_to_activate: Group-19 ; The_rotation: 0">
-            </a-plane>
-
-
-        </a-entity>
         <!-- ############################################################ -->
         <!-- ############################################################ -->
         <!-- ############################################################ -->
@@ -528,32 +369,32 @@
         let theDescription = document.querySelector('.the_description')
         let the_sky = document.querySelector('#image-360')
         let the_cursor = document.querySelector('.a-mouse-cursor-hover')
-        let theGallery = document.querySelector('.the_gallery')
-        let theGalleryContainer = document.querySelector('.the_gallery_container')
+        // let theGallery = document.querySelector('.the_gallery')
+        // let theGalleryContainer = document.querySelector('.the_gallery_container')
         let TheImage = document.querySelector('.The_Image')
         let TheImageBackCover = document.querySelector('.The_Image_Back_Cover')
-        let oneImage = document.querySelectorAll('.oneImage')
+        // let oneImage = document.querySelectorAll('.oneImage')
         let theBlachHover = document.querySelector('.the_blach_hover')
 
-        theGallery.addEventListener('click', () => {
-            if (theGallery.classList.length === 1) {
-                theGallery.classList.add("the_gallery_active")
-                theGalleryContainer.style.left = '2%';
-                TheImage.style.top = '50%';
-                TheImage.style.opacity = '1';
-                TheImageBackCover.style.opacity = '1';
-                TheImageBackCover.style.zIndex = '9';
-            } else {
-                theGallery.classList.remove("the_gallery_active")
-                theGalleryContainer.style.left = '';
-                TheImage.style.top = '';
-                TheImage.style.opacity = '';
-                TheImageBackCover.style.opacity = '';
-                setTimeout(function () {
-                    TheImageBackCover.style.zIndex = '0';
-                }, 1000);
-            }
-        })
+        // theGallery.addEventListener('click', () => {
+        //     if (theGallery.classList.length === 1) {
+        //         theGallery.classList.add("the_gallery_active")
+        //         theGalleryContainer.style.left = '2%';
+        //         TheImage.style.top = '50%';
+        //         TheImage.style.opacity = '1';
+        //         TheImageBackCover.style.opacity = '1';
+        //         TheImageBackCover.style.zIndex = '9';
+        //     } else {
+        //         theGallery.classList.remove("the_gallery_active")
+        //         theGalleryContainer.style.left = '';
+        //         TheImage.style.top = '';
+        //         TheImage.style.opacity = '';
+        //         TheImageBackCover.style.opacity = '';
+        //         setTimeout(function () {
+        //             TheImageBackCover.style.zIndex = '0';
+        //         }, 1000);
+        //     }
+        // })
 
 
         theInfo.addEventListener('click', () => {
@@ -567,11 +408,11 @@
         })
 
 
-        oneImage.forEach((image, index) => {
-            image.addEventListener('click', (e) => {
-                TheImage.childNodes[1].setAttribute("src", `./Style/Images/gallery/Image-${index + 1}.jpg`)
-            })
-        });
+        // oneImage.forEach((image, index) => {
+        //     image.addEventListener('click', (e) => {
+        //         TheImage.childNodes[1].setAttribute("src", `./Style/Images/gallery/Image-${index + 1}.jpg`)
+        //     })
+        // });
 
 
         AFRAME.registerComponent('the_dote', {
